fix navbar alignment

--- a/src/css/customTheme.css
+++ b/src/css/customTheme.css
@@ -12,8 +12,8 @@
 
 .container {
   max-width: 1100px;
-  margin: 0px auto;
-  padding: 0px 20px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
 
 .tile {
@@ -31,6 +31,28 @@
   text-decoration: none;
 }
 
+.navbar {
+  background-color: #004289;
+  padding: 0 20px;
+}
+
+.navbar button svg {
+  color: white;
+}
+
+.navbar .dsla-search-field svg {
+  color: #807ea3;
+}
+
+.navbar__title {
+  color: white;
+}
+
+.navbar__inner {
+  margin: 0 auto;
+  padding: 0 20px;
+  max-width: 1100px;
+}
 
 @media only screen and (max-width: 768px) {
   .tile {
